# article-ponto-ai

./: .gitignore  README.md  main.py  pyproject.toml  visualize.py
data/: target.json
data/models/: README.md
data/recordings/: README.md
data/training_faces/: README.md
src/: __init__.py
src/core/: __init__.py  base.py  database.py  detector.py  pipeline.py  voting.py
src/metrics/: __init__.py  evaluator.py
src/models/: __init__.py  deepface_models.py  factory.py  onnx_models.py
src/utils/: __init__.py  helpers.py  model_downloader.py  preprocessing.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_base.py  test_database.py  test_database_extended.py  test_detector.py  test_detector_extended.py  test_evaluator.py  test_factory.py  test_helpers.py  test_model_downloader.py  test_models.py  test_preprocessing.py  test_voting.py
