# ─────────────────────────────────────────────
# BUILD SYSTEM
# ─────────────────────────────────────────────
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"


# ─────────────────────────────────────────────
# METADADOS DO PROJETO
# ─────────────────────────────────────────────
[project]
name = "article-ponto-ai"
version = "0.1.0"
description = "Projeto voltado para verficar a performance de diferentes algoritmos de extração de embeddings faciais"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]


# ─────────────────────────────────────────────
# DEPENDÊNCIAS DE DESENVOLVIMENTO / TESTE (uv)
# ─────────────────────────────────────────────
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "factory-boy>=3.3",
    "freezegun>=1.5",
]


# ─────────────────────────────────────────────
# PYTEST
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: testes unitários isolados",
    "integration: testes com dependências reais (banco, API)",
    "slow: testes lentos, omitidos em modo rápido",
]
asyncio_mode = "auto"


# ─────────────────────────────────────────────
# COVERAGE
# ─────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/*/__init__.py",
    "src/*/migrations/*",
    "src/*/settings*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false


# ─────────────────────────────────────────────
# RUFF
# ─────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "S",
    "ANN",
]
ignore = [
    "ANN101",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN"]


# ─────────────────────────────────────────────
# MYPY
# ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]


# ─────────────────────────────────────────────
# SETUPTOOLS
# ─────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]